# rocket-blog

./: Cargo.toml  README.md
posts/: devise-jwt-session-hybrid.md  distinct-on-subquery-with-order.md  hello  hello.md  monkey-patching-in-ruby.md  nextjs-new-design.md  no-active-record-callbacks.md  rails-gotcha-with-options.md  react-input-with-gboard-emoji-bug.md  the-phoenix-project-thoughts.md  upgrading-i18n-webpack-plugin.md  using-loops-in-rspec-tests.md  value-objects-in-ruby.md  writing-objectively-better-specs.md
src/: main.rs
templates/: _base.html.tera  error.html.tera  index.html.tera  post.html.tera  posts.html.tera
