[package]
name = "rocket-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.17"
rocket = "0.5.0"
rand = "0.8.5"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]
